# actbench

./: .gitignore  README.md  dataset.jsonl  pyproject.toml
.github/workflows/: publish.yml
src/actbench/: __init__.py  cli.py
src/actbench/browser/: __init__.py  base.py  fleet.py
src/actbench/clients/: __init__.py  base.py  browseruse.py  raccoonai.py
src/actbench/database/: __init__.py  base.py  schema.sql  sqlite.py
src/actbench/datasets/: __init__.py  base.py  json.py
src/actbench/executor/: __init__.py  evaluator.py  task_executor.py
src/actbench/models/: __init__.py  results.py
src/actbench/runner/: __init__.py  runner.py  task_executor.py
src/actbench/storage/: __init__.py
src/dataset/: dataset.jsonl
src/dataset/extract/: news.json
src/dataset/run/: ecommerce.json
