[project]
name = "actbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "scorchy38", email = "shubh@flyingraccoon.tech" }
]
requires-python = ">=3.12"
dependencies = [
    "raccoonai",
    "pyyaml",
    "click",
    "pydantic",
    "pytest",
    "rich",
    "pyfiglet"
]

[project.scripts]
actbench = "actbench.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
