[project]
name = "actbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "scorchy38", email = "shubh@flyingraccoon.tech" }
]
requires-python = ">=3.12"
dependencies = [
    "raccoonai~=0.1.0a6",
    "click~=8.1.8",
    "pydantic~=2.10.6",
    "rich~=13.9.4",
    "pyfiglet~=1.0.2",
    "langchain~=0.3.19",
    "langchain-openai~=0.3.7",
]

[project.scripts]
actbench = "actbench.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
