[project]
name = "actbench"
version = "0.0.1-alpha.4"
description = "A framework for evaluating web automation agents and LAM systems."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Raccoon AI", email = "team@flyingraccoon.tech" },
]
requires-python = ">=3.12"
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "raccoonai~=0.1.0a6",
    "click~=8.1.8",
    "pydantic~=2.10.6",
    "rich~=13.9.4",
    "pyfiglet~=1.0.2",
    "langchain~=0.3.19",
    "langchain-openai~=0.3.7",
    "browser-use~=0.1.24",
]

keywords = ["web automation", "agent evaluation", "LAM systems", "AI", "benchmarking"]

[project.urls]
Homepage = "https://github.com/raccoonaihq/actbench"
Repository = "https://github.com/raccoonaihq/actbench"

[project.scripts]
actbench = "actbench.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
